@@ -1,3 +1,7 @@
+2016-09-20  "Hanno Böck" <hanno@hboeck.de>
+
+	* gpg.c: Fix external linkage.
+
 2016-03-04  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Update to gettext-0.19.6
