@@ -1,3 +1,8 @@
+2016-09-20  "Hanno Böck" <hanno@hboeck.de>
+
+	* libs/maildrop/maildir.C (MaildirSave): Fix new/delete mismatch.
+	* libs/sqwebmail/gpg.c: Fix external linkage.
+
 4.17.2
 
 2016-08-03  Sam Varshavchik  <mrsam@courier-mta.com>
